# cuda-ctl

./: CMakeLists.txt  README.md
include/: cuda-helper.h  cuda-subset.h  hijack.h  nvml-helper.h  nvml-subset.h
src/: cuda_originals.c  hijack_call.c  loader.c  nvml_entry.c  register.c
